[project]
name = "arks"
version = "0.5.8"
description = "This is the arks.org resolver service."
authors = [{ name = "datadave", email = "605409+datadavev@users.noreply.github.com" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "PyYAML>=6,<7",
    "fastapi>=0,<1",
    "pydantic-settings>=2,<3",
    "rslv",
    "click>=8.1.7,<9",
    "httpx>=0.27.0,<0.28",
    "sqlalchemy[asyncio]>=2.0.29,<3",
    "aiosqlite>=0.20.0,<0.21",
]

[project.scripts]
arks = "arks.__main__:main"

[dependency-groups]
dev = [
    "pytest>=7,<8",
    "uvicorn>=0.30.1,<0.31",
]

[tool.poetry_bumpversion.file."arks/__init__.py"]

[tool.uv]

[tool.uv.sources]
rslv = { git = "https://github.com/CDLUC3/resolver.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
